k8s/flux/cluster/apps/db/mysql/app/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-tailscale-ingress
spec:
  ingressClassName: tailscale
  rules:
    - 
      host: mysql-homelab.taildd1ad.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysql-service
                port:
                  number: 3306
  defaultBackend:
    service:
      name: mysql-service
      port:
        number: 3306
  tls:
    - hosts:
        - mysql-homelab.taildd1ad.ts.net
